--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,15 @@
     "@babel/preset-typescript"
   ],
   "plugins": [
+    ["module-resolver", {
+      "extensions": [".js", ".jsx", ".ts", ".tsx"],
+      "root": ["./src"],
+      "alias": {
+        "@/*": [
+          "src/*"
+        ]
+      }
+    }],
     "lodash",
     "@babel/plugin-proposal-export-namespace-from",
     "@babel/plugin-proposal-class-properties",
