Reorganize entire project in hexagonal architecture

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "esnext"
     ],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@core/*": ["src/core/*"]
     }
   },
   "include": [
